<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Collect"
    android:id="@+id/collect_page"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/title_CP_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UI_title"
        android:textColor="@color/title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="35dp">
        <TextView
            android:id="@+id/label_CP_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CP_label"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginRight="10dp"/>
        <Spinner
            android:id="@+id/spinner_CP"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/CP_label_list"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="120dp">
        <Button
            android:id="@+id/start_CP_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CP_btn_start"
            android:layout_margin="6dp"
            android:textColor="@color/title"
            android:backgroundTint="@color/light_blue"/>
        <Button
            android:id="@+id/end_CP_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CP_btn_end"
            android:layout_margin="6dp"
            android:textColor="@color/title"
            android:backgroundTint="@color/light_blue"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/collect_CP_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_collect"
            android:layout_margin="6dp"
            android:textColor="@color/title"
            android:backgroundTint="@color/light_blue"/>
        <Button
            android:id="@+id/train_CP_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_train"
            android:layout_margin="6dp"
            android:textColor="@color/title"
            android:backgroundTint="@color/light_blue"/>
        <Button
            android:id="@+id/deploy_CP_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_deploy"
            android:layout_margin="6dp"
            android:textColor="@color/title"
            android:backgroundTint="@color/light_blue"/>
    </LinearLayout>

</LinearLayout>