<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main_page"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/title_main_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UI_title"
        android:textColor="@color/title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp"/>

    <ImageView
        android:id="@+id/BG_main_img"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        android:src="@drawable/hw1_background"
        android:padding="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/collect_main_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_collect"
            android:layout_margin="6dp"
            android:textColor="@color/title"
            android:backgroundTint="@color/light_blue"/>
        <Button
            android:id="@+id/train_main_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_train"
            android:layout_margin="6dp"
            android:textColor="@color/title"
            android:backgroundTint="@color/light_blue"/>
        <Button
            android:id="@+id/deploy_main_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_deploy"
            android:layout_margin="6dp"
            android:textColor="@color/title"
            android:backgroundTint="@color/light_blue"/>
    </LinearLayout>
</LinearLayout>